# advent_of_code

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
challenges/: CMakeLists.txt
challenges/01/c01/: adv_2022_01_01.cpp  adv_2022_01_01.py  day1-01.cpp
challenges/01/c02/: adv_2022_01_02.cpp  adv_2022_01_02.py
challenges/02/c01/: adv_2022_02_01.cpp  adv_2022_02_01.py
challenges/02/c02/: adv_2022_02_02.cpp  adv_2022_02_02.py
challenges/03/c01/: adv_2022_02_01.py  adv_2022_03_01-pointers.cpp  adv_2022_03_01.cpp  adv_2022_03_01.py
challenges/03/c02/: adv_2022_02_02.py  adv_2022_03_02.cpp
challenges/04/c01/: adv_2022_04_01.cpp  adv_2022_04_01.py
challenges/04/c02/: adv_2022_04_02.cpp  adv_2022_04_02.py
challenges/05/c01/: adv_2022_05_01.cpp  adv_2022_05_01.py
challenges/05/c02/: adv_2022_05_02.cpp  adv_2022_05_02.py
challenges/06/c01/: adv_2022_06_01.cpp
challenges/06/c02/: adv_2022_06_02.cpp  adv_2022_06_02.py
challenges/07/c01/: adv_2022_07_01.cpp  adv_2022_07_01.py
challenges/07/c02/: adv_2022_07_02.cpp  adv_2022_07_02.py
lib/: CMakeLists.txt  FileList.cpp
lib/include/: FileList.h
utils/: import_input.py
